test/forgetIfThenElseInvalid.slq

// destroying dependency in conditional
def f0(x:ğ”¹,y:ğ”¹){
	// consume y in both branches
	if x{
		z:=y;
	}else{
		z:=H(y);
	}

	__show(__query("dep", z)); // should print âŠ¤
	forget(z); // error

	return (x);
}
